Sun Sep 03 11:55:33 BST 2000 Olly Betts

	* Checked in missing new sources.

Sat Sep 02 18:30:48 BST 2000 Olly Betts

	* Implemented OmPostListIterator.

Fri Sep 01 18:36:09 BST 2000 Olly Betts

	* apitest: Split off api_db.cc - test requiring a database.

Fri Sep 01 18:18:08 BST 2000 Olly Betts

	* apitest: Split off api_posdb.cc - tests requiring positional info.
 
Fri Sep 01 16:51:52 BST 2000 Olly Betts

	* apitest: pctcutoff1 now works with DA backend; tests which need
	  document length are now a separate category.
 
Fri Sep 01 15:52:06 BST 2000 Olly Betts

	* apitest: Split off nodb tests into api_nodb.cc.

	* Testsuite "-f" switch is now pointless - removed.
	
Fri Sep 01 13:22:33 BST 2000 Olly Betts

	* apitest now uses test helpers in many more tests.
 
Fri Sep  1 13:12:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change find invocations to be portable, in docs/Makefile.am and
	  docs/mkdocs.pl.in

Fri Sep  1 12:57:59 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Correct sense of test for presence of doxygen.  How we never
	  noticed this before eludes me...

Fri Sep 01 11:20:03 BST 2000 Olly Betts

	* Moved some test helper functions from apitest.cc to testsuite.cc.
 
Fri Sep 01 10:06:00 BST 2000 Olly Betts

	* testutils.h and testsuite.h moved from common to testsuite.

Thu Aug 31 18:07:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented the OmIndexerNode bits to handle primitive types
	  as well as records.  Primitive types are converted to/from
	  records as needed.

	* Added support for "ANY" type which is compatible with any
	  other.  (Used for "split" node, for example)

Thu Aug 31 17:50:00 BST 2000 Olly Betts

	* Headers to be used by include test are now found by parsing
	  Makefile.in-s which fixes several niggles.

Thu Aug 31 16:08:00 BST 2000 Olly Betts

	* Added tests for NEAR/PHRASE distributing over sub-expressions.
